only put bounds in vector if range is outside of copy range, fdo#74041

There are 4 cases of which only two need an entry in the vector. If the
start is before the copy range and if the end is past the end of the
copy range.

Change-Id: Ia88f6891e03257c3321dbfb271be559378e39625
Reviewed-on: https://gerrit.libreoffice.org/7684
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>